testsuite/tests/parser/should_fail/T22070.hs
module T22070 where

newtype FooBar = Foo | Bar
