testsuite/tests/parser/should_fail/T22070.stderr

T22070.hs:3:1: error: [GHC-05380]
    A newtype must have exactly one constructor, but ‘FooBar’ has two
    In the newtype declaration for ‘FooBar’
